<resources>
    <string name="app_name">HELEN</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bda">BDA</string>
    <string name="mc">MC</string>
    <string name="dbi">DBMS/BI</string>
    <string name="aca">ACA</string>
    <string name="pp">Project phase2</string>
    <string name="login">LOGIN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password1">Confirm Password</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_perfor">Perfor</string>
    <string name="title_activity_res2">Res2</string>
    <string name="title_activity_pdf_opener">PdfOpener</string>>
<string-array name="perfordetails">
    <item>Test1</item>
    <item>Test2</item>
    <item>Midterm</item>
</string-array>
</resources>
