<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/horizontalScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:layout_marginBottom="16dp" >
    <TableRow
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
       android:padding="5dp">
        <TextView
            android:id="@+id/spaceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="DAY/period"
            />

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday" />
        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />
        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />
        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/border" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="5dp"
            android:text="9-10AM"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bda"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bda"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/border"
       >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="10-11AM" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dbi" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dbi"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="11:15-12:15PM" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aca" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bda"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aca"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="12:15-1:15PM" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mc" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aca"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bda"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="2:15-3:15PM" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aca" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dbi"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pp"
            />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="3:15-4:15PM" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mc" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mc"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </TableRow>
</TableLayout>
</HorizontalScrollView>